--- a/筆記/资治通鉴21.html
+++ b/筆記/资治通鉴21.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html><head>
-      <title>index</title>
+      <title>资治通鉴21</title>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       
@@ -261,244 +261,117 @@ pre[data-line] .line-highlight[data-end]:after {
     </head>
     <body for="html-export">
       <div class="mume markdown-preview  ">
-      <h1 class="mume-header" id="%E8%B3%87%E6%B2%BB%E9%80%9A%E9%91%91">資治通鑑</h1>
+      <blockquote>
+<p>2021/4/8-&gt;2021/4/14</p>
+</blockquote>
+<h1 class="mume-header" id="313-%E5%8D%B7%E4%BA%8C%E5%8D%81%E4%B8%80-%E6%B1%89%E7%BA%AA%E5%8D%81%E4%B8%89">313 卷二十一 汉纪十三</h1>
 
 <blockquote>
-<p>筆記、整理、數據化</p>
+<p>-109-&gt;-99</p>
 </blockquote>
+<h2 class="mume-header" id="31301-%E6%AD%A6%E5%B8%9D%E6%B1%82%E4%BB%99%E5%8F%8A%E5%BE%81%E6%9C%9D%E9%B2%9C">31301 武帝求仙及征朝鲜</h2>
+
 <blockquote>
-<p>制作：<a href="https://gamefang.github.io/">gamefang</a></p>
+<p>冬，十月，上行幸雍，祠五畤-&gt;以讨朝鲜</p>
 </blockquote>
-<h2 class="mume-header" id="1-%E4%B8%BB%E8%A6%81%E6%95%B8%E6%93%9A">1 主要數據</h2>
+<ul>
+<li>鸡卜：用鸡一，狗一，生，祝愿讫，即杀鸡狗煮熟，又祭，独取鸡两眼，骨上自有孔裂，似人物形则吉，不足则凶。</li>
+</ul>
+<h2 class="mume-header" id="31302-%E7%81%AD%E6%BB%87%E5%9B%BD%E5%8F%8A%E7%A0%B4%E6%A5%BC%E5%85%B0">31302 灭滇国及破楼兰</h2>
 
+<blockquote>
+<p>初，上使王然于以越破及诛南夷兵威喻滇王入朝-&gt;初作角抵戏、鱼龙曼延之属</p>
+</blockquote>
 <ul>
-<li>1.1 <a href="%E4%B8%BB%E8%A6%81%E6%95%B8%E6%93%9A/%E9%80%9A%E9%91%92%E7%9B%AE%E9%8C%84.html">通鑒目錄</a></li>
-<li>1.2 <a href="%E4%B8%BB%E8%A6%81%E6%95%B8%E6%93%9A/%E4%BA%BA%E7%89%A9%E7%B8%BD%E8%A1%A8.html">人物總表</a>
+<li>魚龍曼延：異獸互相變化的百戲</li>
+</ul>
+<h2 class="mume-header" id="31303-%E7%81%AD%E6%9C%9D%E9%B2%9C">31303 灭朝鲜</h2>
+
+<blockquote>
+<p>汉兵入朝鲜境-&gt;欲居九夷，有以也夫</p>
+</blockquote>
 <ul>
-<li>1.2.1 <a href="%E4%B8%BB%E8%A6%81%E6%95%B8%E6%93%9A/%E5%AD%97%E6%AE%B5%E8%AA%AA%E6%98%8E.html">字段說明</a></li>
+<li>箕子朝鲜夜不闭户，应与孔子欲居九夷一样，都是想得美</li>
+</ul>
+<h2 class="mume-header" id="31304-%E5%8C%88%E5%A5%B4%E5%81%87%E5%92%8C%E4%BA%B2%E5%8F%8A%E5%90%8D%E8%87%A3%E6%AC%B2%E5%B0%BD">31304 匈奴假和亲及名臣欲尽</h2>
+
+<blockquote>
+<p>秋，七月，胶西于王端薨-&gt;其令州、郡察吏、民有茂才、异等可为将、相及使绝国者</p>
+</blockquote>
+<h2 class="mume-header" id="31305-%E5%92%8C%E4%BA%B2%E4%B9%8C%E5%AD%99%E5%8F%8A%E5%A4%A7%E6%92%92%E5%B8%81">31305 和亲乌孙及大撒币</h2>
+
+<blockquote>
+<p>冬，上行幸回中-&gt;待之过于汉使焉</p>
+</blockquote>
+<ul>
+<li>因有乱伦兽交谋反之父，被汉武帝作为和亲工具，远嫁乌孙糟老头做妾，死后改嫁其孙，五年而死，刘细君一生皆在为父赎罪</li>
+<li>酒池肉林给外国人看是大撒币，自己用就成了纣王，同样的烧包。秦皇汉武和桀纣之君只是观察角度不同</li>
+</ul>
+<h2 class="mume-header" id="31306-%E4%BD%9C%E5%BB%BA%E7%AB%A0%E5%AE%AB%E5%8F%8A%E5%AE%9A%E5%A4%AA%E5%88%9D%E5%8E%86">31306 作建章宫及定太初历</h2>
+
+<blockquote>
+<p>是岁，匈奴乌维单于死-&gt;秋，八月，上行幸安定</p>
+</blockquote>
+<ul>
+<li>因柏梁台失火，愿从越人言，大兴建章宫，终成阿房宫</li>
+<li>匈奴投降还八字没一撇，受降城已建成，基建狂魔从此始</li>
+</ul>
+<h2 class="mume-header" id="31307-%E6%83%A7%E5%BE%81%E5%A4%A7%E5%AE%9B">31307 惧征大宛</h2>
+
+<blockquote>
+<p>汉使入西域者言-&gt;贰师恐，因留敦煌</p>
+</blockquote>
+<ul>
+<li>公孙贺当上丞相，说我这辈子完蛋了。好大喜功君主的二把手，绝对是高危职业</li>
+<li>汉宛战争始末
+<ul>
+<li>汉武帝想要大宛的汗血马，派使者拿金马去换。大宛王不愿意，使者杂碎金马大闹一场，大宛王在使者归途中刺杀之</li>
+<li>卫霍之后，汉武帝以为小舅子都是军事奇才。</li>
+<li>赵破奴之后，汉武帝以为西域小国千人可灭一个。</li>
+<li>由此汉武帝派常败将军倡优後代李广利远征乌兹别克斯坦，挑个软柿子送给倾国倾城李夫人他哥。</li>
+<li>李广利带六千骑兵数万流氓，还没走到大宛士兵就基本死光，想回城歇会，被汉武帝怒拒。</li>
+<li>汉武帝硬着头皮撑着脸皮，再凑骑兵流氓六万人增援，李广利再战。</li>
+<li>三万兵活着到大宛城下，围城四十日致其内乱，得其王头、善马数十中马三千而归。</li>
+<li>回国还剩兵万余，马千余，汉武帝大喜，李广利封侯八千户</li>
+<li>士兵高达八成以上死亡率，除战死外，很多是由于李广利不体恤士卒导致的非正常死亡</li>
 </ul>
 </li>
-<li>1.3 政權年代表
+</ul>
+<h2 class="mume-header" id="31308-%E8%B5%B5%E7%A0%B4%E5%A5%B4%E8%A2%AB%E6%93%92">31308 赵破奴被擒</h2>
+
+<blockquote>
+<p>上犹以受降城去匈奴远-&gt;罔亦少密焉</p>
+</blockquote>
+<h2 class="mume-header" id="31309-%E5%A4%8D%E5%BE%81%E5%A4%A7%E5%AE%9B">31309 复征大宛</h2>
+
+<blockquote>
+<p>汉既亡浞野之兵-&gt;岁献天马二匹</p>
+</blockquote>
+<h2 class="mume-header" id="31310-%E8%8B%8F%E6%AD%A6%E7%89%A7%E7%BE%8A">31310 苏武牧羊</h2>
+
+<blockquote>
+<p>秋，起明光宫-&gt;各置他所</p>
+</blockquote>
 <ul>
-<li>1.3.1 <a href="%E4%B8%BB%E8%A6%81%E6%95%B8%E6%93%9A/%E6%94%BF%E6%AC%8A%E5%B9%B4%E4%BB%A3%E8%A1%A8/%E6%88%B0%E5%9C%8B%E7%A7%A6.html">戰國秦</a></li>
-<li>1.3.2 <a href="%E4%B8%BB%E8%A6%81%E6%95%B8%E6%93%9A/%E6%94%BF%E6%AC%8A%E5%B9%B4%E4%BB%A3%E8%A1%A8/%E6%BC%A2.html">漢</a></li>
+<li>蘇武自殺未遂後，開啟無敵模式，餓不死冷不死</li>
 </ul>
-</li>
-</ul>
-<h2 class="mume-header" id="2-%E5%B9%B4%E4%BB%A3%E5%B0%88%E9%A0%85">2 年代專項</h2>
+<h2 class="mume-header" id="31311-%E6%B5%9A%E7%A8%BD%E5%B1%B1%E4%B9%8B%E6%88%B0">31311 浚稽山之戰</h2>
 
-<h3 class="mume-header" id="21-%E6%9D%B1%E5%91%A8">2.1 東周</h3>
-
-<h4 class="mume-header" id="211-%E6%99%89%E5%9C%8B%E5%85%AD%E5%8D%BF">2.1.1 晉國六卿</h4>
-
+<blockquote>
+<p>天雨白氂-&gt;乃遣使劳赐陵馀军得脱者</p>
+</blockquote>
 <ul>
-<li>2.1.1.1 <a href="%E5%B9%B4%E4%BB%A3%E5%B0%88%E9%A0%85/%E6%9D%B1%E5%91%A8/%E6%99%89%E5%9C%8B%E5%85%AD%E5%8D%BF/%E6%99%89%E5%9C%8B%E5%85%AD%E5%8D%BF.html">晉國六卿</a></li>
+<li>軍隊下有部，校尉統領；部下有曲，軍候統領</li>
+<li>李信、李廣、李陵，持續迷之自信吹牛打臉。對李陵的美化至少一半出自司馬遷私貨，一半出自唐朝的認親，真實的正面程度還剩多少？</li>
 </ul>
-<h4 class="mume-header" id="212-%E5%85%AD%E5%9C%8B%E4%B8%96%E7%B3%BB%E5%9C%96">2.1.2 六國世系圖</h4>
+<h2 class="mume-header" id="31312-%E7%9B%B4%E6%8C%87%E7%B9%A1%E8%A1%A3%E4%BD%BF%E8%80%85">31312 直指繡衣使者</h2>
 
+<blockquote>
+<p>上以法制御下-&gt;汉兵不利，引去</p>
+</blockquote>
 <ul>
-<li>2.1.2.1 <a href="%E5%B9%B4%E4%BB%A3%E5%B0%88%E9%A0%85/%E6%9D%B1%E5%91%A8/%E5%85%AD%E5%9C%8B%E4%B8%96%E7%B3%BB%E5%9C%96/%E6%A5%9A%E5%9C%8B%E4%B8%96%E7%B3%BB%E5%9C%96.html">楚國世系圖</a></li>
-<li>2.1.2.2 <a href="%E5%B9%B4%E4%BB%A3%E5%B0%88%E9%A0%85/%E6%9D%B1%E5%91%A8/%E5%85%AD%E5%9C%8B%E4%B8%96%E7%B3%BB%E5%9C%96/%E9%9F%93%E5%9C%8B%E4%B8%96%E7%B3%BB%E5%9C%96.html">韓國世系圖</a></li>
-<li>2.1.2.3 <a href="%E5%B9%B4%E4%BB%A3%E5%B0%88%E9%A0%85/%E6%9D%B1%E5%91%A8/%E5%85%AD%E5%9C%8B%E4%B8%96%E7%B3%BB%E5%9C%96/%E8%B6%99%E5%9C%8B%E4%B8%96%E7%B3%BB%E5%9C%96.html">趙國世系圖</a></li>
-<li>2.1.2.4 <a href="%E5%B9%B4%E4%BB%A3%E5%B0%88%E9%A0%85/%E6%9D%B1%E5%91%A8/%E5%85%AD%E5%9C%8B%E4%B8%96%E7%B3%BB%E5%9C%96/%E9%AD%8F%E5%9C%8B%E4%B8%96%E7%B3%BB%E5%9C%96.html">魏國世系圖</a></li>
-<li>2.1.2.5 <a href="%E5%B9%B4%E4%BB%A3%E5%B0%88%E9%A0%85/%E6%9D%B1%E5%91%A8/%E5%85%AD%E5%9C%8B%E4%B8%96%E7%B3%BB%E5%9C%96/%E7%87%95%E5%9C%8B%E4%B8%96%E7%B3%BB%E5%9C%96.html">燕國世系圖</a></li>
-<li>2.1.2.6 <a href="%E5%B9%B4%E4%BB%A3%E5%B0%88%E9%A0%85/%E6%9D%B1%E5%91%A8/%E5%85%AD%E5%9C%8B%E4%B8%96%E7%B3%BB%E5%9C%96/%E9%BD%8A%E5%9C%8B%E4%B8%96%E7%B3%BB%E5%9C%96.html">齊國世系圖</a></li>
+<li>繡衣使者、沉命法因農民起義而生，以山東徐勃起義為首</li>
 </ul>
-<h3 class="mume-header" id="22-%E7%A7%A6%E6%9C%AB%E6%A5%9A%E6%BC%A2">2.2 秦末楚漢</h3>
-
-<ul>
-<li>2.2.1 <a href="https://www.ageeye.cn/map/66656/">陳勝吳廣起義始末</a></li>
-<li>2.2.2 <a href="%E5%B9%B4%E4%BB%A3%E5%B0%88%E9%A0%85/%E7%A7%A6%E6%9C%AB%E6%A5%9A%E6%BC%A2/%E7%A7%A6%E6%9C%AB%E6%A5%9A%E6%BC%A2%E6%94%BF%E6%AC%8A.html">秦末楚漢政權</a></li>
-<li>2.2.3 <a href="%E5%B9%B4%E4%BB%A3%E5%B0%88%E9%A0%85/%E7%A7%A6%E6%9C%AB%E6%A5%9A%E6%BC%A2/%E7%A7%A6%E6%9C%AB%E9%BD%8A%E5%9C%8B%E6%94%BF%E6%AC%8A%E5%9C%96.png">秦末齊國政權圖</a></li>
-</ul>
-<h3 class="mume-header" id="23-%E8%A5%BF%E6%BC%A2">2.3 西漢</h3>
-
-<ul>
-<li>2.3.1 <a href="%E5%B9%B4%E4%BB%A3%E5%B0%88%E9%A0%85/%E8%A5%BF%E6%BC%A2/%E7%A5%9E%E5%A5%87%E7%9A%84%E9%AD%AF%E5%85%83%E5%85%AC%E4%B8%BB.png">神奇的魯元公主</a></li>
-<li>2.3.2 <a href="%E5%B9%B4%E4%BB%A3%E5%B0%88%E9%A0%85/%E8%A5%BF%E6%BC%A2/%E8%A5%BF%E6%BC%A2%E9%96%8B%E5%9C%8B%E5%8A%9F%E8%87%A3%E5%88%97%E8%A1%A8.html">西漢開國功臣列表</a></li>
-<li>2.3.3 <a href="%E5%B9%B4%E4%BB%A3%E5%B0%88%E9%A0%85/%E8%A5%BF%E6%BC%A2/%E5%8A%89%E9%82%A6%E4%B8%96%E7%B3%BB%E5%9C%96.html">劉邦世系圖</a></li>
-<li>2.3.4 <a href="%E5%B9%B4%E4%BB%A3%E5%B0%88%E9%A0%85/%E8%A5%BF%E6%BC%A2/%E5%BC%B5%E9%A8%AB%E9%80%9A%E8%A5%BF%E5%9F%9F%E8%AB%B8%E5%9C%8B%E6%A6%82%E6%B3%81.html">張騫通西域諸國概況</a></li>
-</ul>
-<h2 class="mume-header" id="3-%E9%80%9A%E7%94%A8%E5%B0%88%E9%A0%85">3 通用專項</h2>
-
-<h3 class="mume-header" id="31-%E6%AD%B7%E4%BB%A3%E4%B8%96%E7%B3%BB%E5%9C%96">3.1 歷代世系圖</h3>
-
-<ul>
-<li>3.1.1 <a href="%E9%80%9A%E7%94%A8%E5%B0%88%E9%A0%85/%E6%AD%B7%E4%BB%A3%E4%B8%96%E7%B3%BB%E5%9C%96/%E5%91%A8%E6%9C%9D%E4%B8%96%E7%B3%BB%E5%9C%96.html">周朝世系圖</a></li>
-<li>3.1.2 <a href="%E9%80%9A%E7%94%A8%E5%B0%88%E9%A0%85/%E6%AD%B7%E4%BB%A3%E4%B8%96%E7%B3%BB%E5%9C%96/%E7%A7%A6%E5%9C%8B%E4%B8%96%E7%B3%BB%E5%9C%96.html">秦國世系圖</a></li>
-</ul>
-<h3 class="mume-header" id="39-%E9%9B%9C%E9%A0%85">3.9 雜項</h3>
-
-<ul>
-<li>3.9.1 <a href="%E9%80%9A%E7%94%A8%E5%B0%88%E9%A0%85/%E9%9B%9C%E9%A0%85/%E5%B9%B2%E6%94%AF%E8%A1%A8.html">干支表</a></li>
-<li>3.9.2 <a href="%E9%80%9A%E7%94%A8%E5%B0%88%E9%A0%85/%E9%9B%9C%E9%A0%85/%E6%94%9D%E6%8F%90%E5%B0%8D%E7%85%A7%E8%A1%A8.html">攝提對照表</a></li>
-<li>3.9.3 <a href="%E9%80%9A%E7%94%A8%E5%B0%88%E9%A0%85/%E9%9B%9C%E9%A0%85/%E5%92%8C%E8%A6%AA%E5%88%97%E8%A1%A8.html">和親列表</a></li>
-<li>3.9.4 <a href="%E9%80%9A%E7%94%A8%E5%B0%88%E9%A0%85/%E9%9B%9C%E9%A0%85/%E8%A2%AB%E8%A9%9B%E5%92%92%E7%9A%84%E8%B6%99%E7%8E%8B.html">被詛咒的趙王</a></li>
-<li>3.9.5 <a href="%E9%80%9A%E7%94%A8%E5%B0%88%E9%A0%85/%E9%9B%9C%E9%A0%85/%E5%A5%87%E8%91%A9%E5%BA%8F%E5%88%97.html">奇葩序列</a></li>
-<li>3.9.6 <a href="%E9%80%9A%E7%94%A8%E5%B0%88%E9%A0%85/%E9%9B%9C%E9%A0%85/%E7%99%BE%E8%B6%8A%E5%90%84%E5%9C%8B.html">百越各國</a></li>
-</ul>
-<h2 class="mume-header" id="4-%E7%AD%86%E8%A8%98">4 筆記</h2>
-
-<table>
-<thead>
-<tr>
-<th>卷目</th>
-<th>卷名</th>
-<th>起始年</th>
-<th>結束年</th>
-<th>備注</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td><a href="%E7%AD%86%E8%A8%98/%E8%B5%84%E6%B2%BB%E9%80%9A%E9%89%B41.html">卷1</a></td>
-<td>周紀一</td>
-<td>-403</td>
-<td>-369</td>
-<td>周威烈王23年至24年、周安王共26年、周烈王至7年</td>
-</tr>
-<tr>
-<td><a href="%E7%AD%86%E8%A8%98/%E8%B5%84%E6%B2%BB%E9%80%9A%E9%89%B42.html">卷2</a></td>
-<td>周紀二</td>
-<td>-368</td>
-<td>-321</td>
-<td>周顯王共48年</td>
-</tr>
-<tr>
-<td><a href="%E7%AD%86%E8%A8%98/%E8%B5%84%E6%B2%BB%E9%80%9A%E9%89%B43.html">卷3</a></td>
-<td>周紀三</td>
-<td>-320</td>
-<td>-298</td>
-<td>周慎靚王共6年、周赧王至17年</td>
-</tr>
-<tr>
-<td><a href="%E7%AD%86%E8%A8%98/%E8%B5%84%E6%B2%BB%E9%80%9A%E9%89%B44.html">卷4</a></td>
-<td>周紀四</td>
-<td>-297</td>
-<td>-273</td>
-<td>周赧王18年至42年</td>
-</tr>
-<tr>
-<td><a href="%E7%AD%86%E8%A8%98/%E8%B5%84%E6%B2%BB%E9%80%9A%E9%89%B45.html">卷5</a></td>
-<td>周紀五</td>
-<td>-272</td>
-<td>-256</td>
-<td>周赧王43年至59年</td>
-</tr>
-<tr>
-<td><a href="%E7%AD%86%E8%A8%98/%E8%B5%84%E6%B2%BB%E9%80%9A%E9%89%B46.html">卷6</a></td>
-<td>秦紀一</td>
-<td>-255</td>
-<td>-228</td>
-<td>秦昭襄王52年至56年、秦孝文王共1年、秦莊襄王共3年、秦王政至19年</td>
-</tr>
-<tr>
-<td><a href="%E7%AD%86%E8%A8%98/%E8%B5%84%E6%B2%BB%E9%80%9A%E9%89%B47.html">卷7</a></td>
-<td>秦紀二</td>
-<td>-227</td>
-<td>-209</td>
-<td>秦始皇20年至37年、秦二世元年</td>
-</tr>
-<tr>
-<td><a href="%E7%AD%86%E8%A8%98/%E8%B5%84%E6%B2%BB%E9%80%9A%E9%89%B48.html">卷8</a></td>
-<td>秦紀三</td>
-<td>-208</td>
-<td>-207</td>
-<td>秦二世2年至3年</td>
-</tr>
-<tr>
-<td><a href="%E7%AD%86%E8%A8%98/%E8%B5%84%E6%B2%BB%E9%80%9A%E9%89%B49.html">卷9</a></td>
-<td>漢紀一</td>
-<td>-206</td>
-<td>-205</td>
-<td>楚漢至2年</td>
-</tr>
-<tr>
-<td><a href="%E7%AD%86%E8%A8%98/%E8%B5%84%E6%B2%BB%E9%80%9A%E9%89%B410.html">卷10</a></td>
-<td>漢紀二</td>
-<td>-204</td>
-<td>-203</td>
-<td>楚漢3年至4年</td>
-</tr>
-<tr>
-<td><a href="%E7%AD%86%E8%A8%98/%E8%B5%84%E6%B2%BB%E9%80%9A%E9%89%B411.html">卷11</a></td>
-<td>漢紀三</td>
-<td>-202</td>
-<td>-200</td>
-<td>漢高祖5年至7年</td>
-</tr>
-<tr>
-<td><a href="%E7%AD%86%E8%A8%98/%E8%B5%84%E6%B2%BB%E9%80%9A%E9%89%B412.html">卷12</a></td>
-<td>漢紀四</td>
-<td>-199</td>
-<td>-188</td>
-<td>漢高祖8年至12年、漢惠帝共7年</td>
-</tr>
-<tr>
-<td><a href="%E7%AD%86%E8%A8%98/%E8%B5%84%E6%B2%BB%E9%80%9A%E9%89%B413.html">卷13</a></td>
-<td>漢紀五</td>
-<td>-187</td>
-<td>-178</td>
-<td>漢高后共8年、漢文帝至2年</td>
-</tr>
-<tr>
-<td><a href="%E7%AD%86%E8%A8%98/%E8%B5%84%E6%B2%BB%E9%80%9A%E9%89%B414.html">卷14</a></td>
-<td>漢紀六</td>
-<td>-177</td>
-<td>-170</td>
-<td>漢文帝3年至10年</td>
-</tr>
-<tr>
-<td><a href="%E7%AD%86%E8%A8%98/%E8%B5%84%E6%B2%BB%E9%80%9A%E9%89%B415.html">卷15</a></td>
-<td>漢紀七</td>
-<td>-169</td>
-<td>-155</td>
-<td>漢文帝11年至23年、漢景帝至2年</td>
-</tr>
-<tr>
-<td><a href="%E7%AD%86%E8%A8%98/%E8%B5%84%E6%B2%BB%E9%80%9A%E9%89%B416.html">卷16</a></td>
-<td>漢紀八</td>
-<td>-154</td>
-<td>-141</td>
-<td>漢景帝3年至16年</td>
-</tr>
-<tr>
-<td><a href="%E7%AD%86%E8%A8%98/%E8%B5%84%E6%B2%BB%E9%80%9A%E9%89%B417.html">卷17</a></td>
-<td>漢紀九</td>
-<td>-140</td>
-<td>-134</td>
-<td>漢武帝至7年</td>
-</tr>
-<tr>
-<td><a href="%E7%AD%86%E8%A8%98/%E8%B5%84%E6%B2%BB%E9%80%9A%E9%89%B418.html">卷18</a></td>
-<td>漢紀十</td>
-<td>-133</td>
-<td>-125</td>
-<td>漢武帝8年至16年</td>
-</tr>
-<tr>
-<td><a href="%E7%AD%86%E8%A8%98/%E8%B5%84%E6%B2%BB%E9%80%9A%E9%89%B419.html">卷19</a></td>
-<td>漢紀十一</td>
-<td>-124</td>
-<td>-119</td>
-<td>漢武帝17年至22年</td>
-</tr>
-<tr>
-<td><a href="%E7%AD%86%E8%A8%98/%E8%B5%84%E6%B2%BB%E9%80%9A%E9%89%B420.html">卷20</a></td>
-<td>漢紀十二</td>
-<td>-118</td>
-<td>-110</td>
-<td>漢武帝17年至23年至31年</td>
-</tr>
-<tr>
-<td><a href="%E7%AD%86%E8%A8%98/%E8%B5%84%E6%B2%BB%E9%80%9A%E9%89%B421.html">卷21</a></td>
-<td>漢紀十三</td>
-<td>-109</td>
-<td>-99</td>
-<td>漢武帝32年至42年</td>
-</tr>
-</tbody>
-</table>
 
       </div>
       
